gba_test_macros/tests/trybuild/should_panic_arguments_not_name_value.stderr
error: argument must be of the form: `expected = "error message"`
 --> tests/trybuild/should_panic_arguments_not_name_value.rs:6:1
  |
6 | #[should_panic("foo")]
  | ^^^^^^^^^^^^^^^^^^^^^^
